--- a/Kaiserreich Korean Translation/localisation/KR_Combined_Syndicates_of_America_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Combined_Syndicates_of_America_l_english.yml
@@ -533,18 +533,18 @@ csa.4.d:0 "Article 6. Citizens are guaranteed the freedom of the press, freedom 
 csa.4.a:0 "승인되었다"
 
 csa.5.t:0 "사회주의 헌법 - 사법"
-csa.5.d:0 "The IWW has made a strong impression for removing the Supreme Court as the final appeal for constitutionality, instead making the Appeal Courts carry that weight. Reminding members of the Convention of the Court's track record for legalizing oppression of unions and downright reactionary laws. Preservationists argue that this discrimination was the result of a corrupt party system, and not an inherent flaw in the U.S. Constitution. It is up to the unaligned delegates to decide the future of the Bench."
-csa.5.a:0 "Enshrine Judicial Review of the Court"
-csa.5.b:0 "The Supreme Court will not be missed"
+csa.5.d:0 "IWW는 연방 대법원이 노조 탄압과 반동적 법률을 정당화 시킨 것을 상기시키며. 최종 상고를 담당하여 합헌성을 평가하는 기능을 삭제하고, 고등법원들에게 그러한 권한에 주자고 주장합니다. 반대로 보존론자들은 그러한 차별들은 부패한 정당제의 결과이지 헌법의 본질적인 결함은 아니라 주장합니다. 이제 연방 대법원의 운명은 아직까지 결정을 못한 배심원들에게 달려 있습니다.“
+csa.5.a:0 "법원에 대한 사법적인 재검토"
+csa.5.b:0 "연방 대법원을 잃을 수는 없다."
 
 csa.6.t:0 "사회주의 헌법 - 경제"
 csa.6.d:0 "제 15조. 미국의 경제 체제의 근간은 모든 국민이 소유권을 가지는 공공 자산 형태의 생산수단에 대한 사회주의적 소유와 협동농장의 재산이다.\n\n제 16조. 지하의 모든 광물과 타 지하자원, 광산수와 약용수를 포함하는 수자원, 천연전력의 공급원, 그 어떠한 형태의 철도 및 항공 운송 수단, 우편물, 전신, 전화 및 방송은 공공 자산으로 한다.\n\n제 17조. 토지의 소유권은 해당 토지를 경작하는 자에게 부여된다. 협동농장과 기타 협동조합 및 이들이 공동으로 운영하는 자산은 생산 수단 및 규정된 목적을 달성하기 위해 필요한 기타 자산으로 구성된다. 협동농장 명의로 소유된 토지의 소유권은 항구적으로 보장된다.\n\n제 18조. 경제적인 사유 재산과 민간 사업의 자유는 보장된다. 사유 재산 상속의 자유는 보장된다. 상속권에 대해서는 법률로 규정한다. 누구도 개인에게 보장된 사유 재산의 권리를 인민 공동체에 피해를 가하기 위해 사용할 수 없다. 물가를 조작하고 시장을 독점하고 공공 경제의 이익을 손상시키기 위해 만들어진 카르텔, 신디케이트, 트러스트 및 이와 유사한 조직의 존재는 금지된다. 사적 재산은 공공의 이익을 위해 필요한 경우 제한되거나 징수될 수 있지만, 이는 오로지 법률에 의해서만 이루어진다. 해당 경우에 원 소유주가 받아야 하는 손해 배상의 가치는 법률로 규정한다. 같은 조건 하에서 국가 경제 또는 단일 기업의 특정 부분은 공공의 이익을 위해 필요한 경우 법률에 의해 국유화될 수 있다."
 csa.6.a:0 "승인되었다"
 
 csa.7.t:0 "사회주의 헌법 - 의회와 대통령"
-csa.7.d:0 "A surge of unaligned delegates has attempted to leave for recess several times to no avail. It appears that the issue of executive power has met an impasse, and a decision must be made before the delegates starve in indecision. On one side is the IWW, whose plan for One Big Union requires no single executive officer. Their belief is that a president is an inherently reactionary populist position, and they will ensure that a person like Huey Long can never rise to power in the new America. The opposition, so called by the press, is a collection of AFL, Vanguardists, and Preservationists who wish for a strong face to represent America. A leader without the means, argue they, could never save America as Reed did without power."
-csa.7.a:0 "Congress Alone Shall Rule"
-csa.7.b:0 "A President with Power We Shall Have"
+sa.7.d:0 “중립적 대표단들이 몇 차례 휴회를 시도했지만 소용이 없었습니다. 행정권에 대한 논쟁으로 회의는 난관에 봉착했으며, 대표단들이 지치기 전에 조속한 결정이 필요합니다. 한쪽은 IWW가 주장하는 것으로 하나의 거대 노조 계획에는 한 명의 대표적 행정 관료가 필요하지 않다고 생각하며 대통령 직위는 그저 휴이 롱 같은 선천적인 반동적 포퓰리즘을 양산하는 자리라고 말하며 새로운 아메리카에는 이런 직위는 없을 것이라고 못 박았습니다. 반대로 언론에서 표현하듯 AFL과 전위대주의자 그리고 보존주의자들은 모두 미국을 대표하는 강력한 얼굴의 필요하다고 생각하며, 지도자라는 도구가 없는 상황은 리드처럼 미국을 구할 수 없다고 주장합니다.”
+csa.7.a:0 "의회가 스스로 통치를 한다."
+csa.7.b:0 "우리가 힘을 준 대통령이 필요하다."
 
 csa.8.t:0 "사회주의 헌법 - 권력 집중 혹은 권력 분산"
 csa.8.d:0 "The Convention, after resuming, has found themselves more divided than ever. The core of the IWW has galvanized into a stricter dogma that pushes for the remaining articles to protect against state tyranny. Protection through the lifetime assurance of union membership and compounding social security with lifelong employment. Several IWW delegates had implied that the AFL has been antagonistic, and would prefer a return to capitalism. In response, the AFL have been swayed by Vanguardists to emphasize the Dignity of Labor in government. This argument rebukes Industrial Unionism with Craft Unionism, where the right to fair wages for fair work done replaces the IWW's goal of the abolition of wages. The AFL argues that this would actually prevent tyranny from the state better, as it prevents a 'tyranny of the 51% over the 49%' in union elections."
@@ -572,17 +572,17 @@ csa.11.e:0 "William Z. Foster gets enough votes to win"
 
 ### Reconstruction Events ###
 
-csa.12.t:0 "Trial of the American First Party"
-csa.12.d:0 "With the Revolution over, the time comes now to deal with those that fought against us. Huey Long, so according to Earl Browder, could have been a great ally to socialism. We do admit that Long's plan for welfare was in the right direction, but his authoritarian practice was abhorrent. As Long's family and close associates are now in exile, we'll have to make due with putting the leaders that remain in chains. Francis Townsend has defended the actions of the AFP's core membership, saying that the radical militarism was due to the nature of Southern Populism, not Huey Long-ism. Some in the jury have been swayed, but the final decision is to......"
-csa.12.a:0 "Pardon AFP Leadership"
-csa.12.b:0 "Convict AFP Leaders"
-csa.12.c:0 "Seize and arrest all party members"
+csa.12.t:0 "미국 제일당원 재판"
+csa.12.d:0 "혁명이 끝남에 따라서 우리와 싸웠던 적을 심판할 시간이 왔습니다. 얼 브라우더에 따르면 휴이 롱은 우리 사회주의에 좋은 동맹이 될 수 있다고 주장합니다. 프랜시스 타운센드 우리 또한 그의 복지계획이 옳은 방향이라고 보지만, 그의 권위주의적 관행은 정말로 끔찍했습니다. 롱의 가족들과 그와 관련된 자들은 망명한 지금 제일당 지도부를 우리의 사슬에 남겨 놓을 수 있을지도 모릅니다. 남부의 제일당 핵심당원이었던 프렌시스 타운센트는 제일당의 극단적 군국주의가 휴이롱주의 때문이 아니라 남부 표퓰리즘 때문이라고 변호하면서 일부 배심원단들이 흔들렸습니다. 그리고 최종적인 재판 결과는.......  
+csa.12.a:0 "제일당 지도부를 사면해라"
+csa.12.b:0 "제일당 지도부는 유죄다."
+csa.12.c:0 "모든 당원들의 재산을 압류하고 체포해라"
 
-csa.13.t:0 "Trial of the Federal Government"
-csa.13.d:0 "With the Revolution over, the time comes now to deal with those that fought against us. The charges against, among other former Federalist politicans Douglas MacArthur. that of seizing the government and suspending civil rights in defense of conservative Democrats. Henry Morganthau Jr. has appeared in MacArthur's stead, due to his recent exile. Representing the business and social interest of the old regime, Morganthau stated that it was only under MacArthur that the mob violence against Jews committed by the AFP was halted. The testimony of MacArthur's reluctance to accept extra-legal power, and his personal accounts of admiring the socialist Jamex Coxey has swayed some. Ultimately, the jury has decided to.....  "
-csa.13.a:0 "Pardon the Federal leaders"
-csa.13.b:0 "Convict the Federal leaders"
-csa.13.c:0 "Seize and arrest all regime supporters"
+csa.13.t:0 "구정권에 대한 재판"
+csa.13.d:0 "혁명이 끝남에 따라서 우리와 싸웠던 적을 심판할 시간이 왔습니다. 정부를 장악하고 시민의 권리를 정지시킨 것에 대해서 이전 연방 정치인인 더글라스 맥아더에 대한 고발이 있었고, 보수적인 민주당원이자 구시대의 기업과 사회를 대표하는 헨리 모겐소 주니어가 망명간 멕아더를 대신해서 재판에 섰습니다. 그의 주장에 따르면 오직 맥아더 통치 아래에서만 유대인에 대한 제일당의 잔인한 공격을 막을 수 있었다고 하면서 멕아더 개인이 초-법적인 권력을 가지기 꺼렸다는 점을 언급하며 개인적으로 jamex coxey라는 사회주의자를 존경한다는 진술로 일부 배심원단을 흔들었습니다. 그리고 최종적인 재판 결과는....  “
+csa.12.a:0 "연방 지도부를 사면해라"
+csa.12.b:0 "연방 지도부는 유죄다."
+csa.12.c:0 "모든 연방 지지자들의 재산을 압류하고 체포해라"
 
 csa.14.t:0 "Avant-Guard Film"
 csa.14.d:0 "Avant-guard art forms are not inherently a political tool, but the artists have shown an overwhelming support for the SPA in 1936. From the surrealists in New York shocking viewers with graphic sex on screen, to the Dadaists who challenge the very concept of popular art. As part of this movement, many of the country thousands of movie theaters have been expropriated to ensure that work of this caliber is not censored by prudish theater owners. They are brightly painted and carrying on board a printing press, government complaint office, printed political leaflets and pamphlets, library books, and a mobile movie theater. Theaters are part of the new revolutionary government to indicate the values and programs to the scattered populace of America particularly the rural regions of the country."
