--- a/Kaiserreich Korean Translation/localisation/KR_American_Civil_War_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_American_Civil_War_l_english.yml
@@ -256,11 +256,11 @@ amcivwar.33.a:0 "전시 생디칼리즘을 제정하라"
 amcivwar.33.b:0 "우리는 자유인으로 살다가 죽을것이다!"
 
 amcivwar.34.t:0 "붉은 마녀"
-amcivwar.34.d:0 "Gender equality has long been a major ideological component of socialist thought, and we have yet more evidence that it works! A squadron of female pilots has earned renown throughout the CSA for their daring raids on enemy territory, their coordinated and synchronized attack formations allowing them to take down larger enemy air forces with ease. Derisively named the 'Red Witches' by the reactionary forces under Huey Long, the squadron, led by Florence 'Pancho' Barnes, has taken their new nickname up with a great deal of pride."
+amcivwar.34.d:0 "양성평등은 오랫동안 사회주의 사상의 주요한 이념적 요소였고, 우리는 그것의 효과를 목도했습니다. 여성 파일럿 중대는 적의 영토에 대한 과감한 습격, 치밀하고 동시다발적인 공격 등으로 노동연맹 내부에서 명성을 얻었습니다. 플로렌스 '판초' 반스가 이끄는 비행대대는 비범하게도 휴이 롱의 반동들에 의해 '붉은 마녀들'이라는 새로운 별명을 얻었습니다."
 amcivwar.34.a:0 "하늘로부터의 죽음을 받아라"
 
 amcivwar.35.t:0 "여군"
-amcivwar.35.d:0 "As the Revolutionary struggle continues a number of women have joined the armed struggle in accordance with the socialist ideals of gender equality. While not all are accepted by their male comrades, it has not deterred many from fighting and dying for the revolution. Manuals have been distributed to recruiters on how to effectively organize Women Detachments, of which the militas can teach the military a thing or two."
+amcivwar.35.d:0 "혁명이 계속됨에 따라 많은 여성들이 양성평등이라는 사회주의 이념에 따라 무장 투쟁에 동참했습니다. 모든 여성들이 남성 동무들에 의해 받아들여지는 것은 아니지만, 이는 많은 사람들이 혁명을 위해 싸우다 죽는 것을 두려워하지 않음을 잘 보여줍니다. 민병대가 군대에 관해 한 두 가지를 간단히 가르침으로써 여성해방군을 효과적으로 조직할 수 있는 방법에 관한 매뉴얼이 군 모집자들에게 배포되었습니다."
 amcivwar.35.a:0 "반란 여성이여, 그대야말로 우리의 여왕이다!"
 
 amcivwar.36.t:0 "내부 분쟁"
@@ -280,14 +280,14 @@ amcivwar.38.a:0 "Focus on the Home Front"
 amcivwar.38.b:0 "적에 집중하라"
 
 amcivwar.39.t:0 "중앙 위원회 지시 #984: 전쟁 전 자본주의 정치인들의 판결"
-amcivwar.39.d:0 "As the revolution nears success, the people demand that we deal with the corrupt, capitalist politicians in office before the revolution who now rot in our cells. Some believe that by having these politicians work hard labour for a few years, they will empathize with the worker, and be converted to our cause. Others believe that no amount of education can reform them, and they must remain behind bars for the rest of their lives. A small, but vocal minority insists that they must be executed for their crimes, like the Romanovs or the Bourbon dynasties of old. "
+amcivwar.39.d:0 "혁명이 성공을 목전에 두고 있음에 따라, 인민들은 지금 우리 감방에서 썩고 있는 혁명이 일어나기 전의 부패한 자본주의 정치인들을 처분할 것을 요구합니다. 몇몇 이들은 이 정치인들을 몇 년 동안 열심히 일하게 함으로써, 이들이 노동자에 대해 공감하고 결국에는 우리의 대의로 전향할 것이라고 믿습니다. 다른 이들은 아무리 많은 교화를 통해서라도 그들을 전향시킬 수 없으며 이들은 평생 감방에 머물러야 한다고 믿습니다. 작지만 목소리 하나는 큰 소수파는 이들의 범죄는 로마노프 왕조나 부르봉 왕조와 같은 죄악이며 모조리 처형시켜야 한다고 주장합니다."
 amcivwar.39.a:0 "They shall be redeemed by the sweat on their brows and the ache of their backs"
 amcivwar.39.b:0 "They shall watch as the world leaves them behind and makes them irrelevant"
 amcivwar.39.c:0 "They must be put to death for their crimes. It is now our turn, and we shall not make excuses for the terror!"
 
-amcivwar.40.t:0 "중앙 위원회 지시 #1231: 첩보 활동을 위한 위원회 창설"
-amcivwar.40.d:0 "It is an unfortunate fact that there are spies and saboteurs within our territory working to prevent our glorious liberation of the proletarian masses. Of the many proposals submitted to the Central Committee, one stands out. Earl Browder's proposal is to create a committee to enforce revolutionary order and stop counter-revolutionary sabotage. However, others within the central committee, including Chairman Reed, wonder if this is a necessary step and if we would be betraying our ideals. Regardless, a vote was taken. What was decided?"
-amcivwar.40.a:0 "The Committee for Intelligence Activities will be created!"
+amcivwar.40.t:0 "중앙 위원회 지시 #1231: 첩보활동을 위한 위원회 창설"
+amcivwar.40.d:0 "우리의 영예로운 프롤레타리아 군중의 해방을 막기 위해 우리 내부에 밀정들이 있다는 것은 불행한 사실입니다. 이에 관해 중앙위원회에 제출된 많은 제안들 중 한 가지가 부각됩니다. 얼 브라우더의 제안은 혁명적인 질서를 강요하고 반혁명적 파괴를 막기 위한 개별적인 위원회를 만드는 것입니다. 그러나 리드 의장을 포함한 중앙위원회 내 다른 사람들은 이것이 진정 필요한 조치인지, 그리고 우리가 밀정을 막기 위해 우리의 이상을 배반해야만 하는지 의문을 표합니다. 그럼에도 불구하고 이에 관해 투표가 이루어졌습니다. 어떻게 결론이 났을까요?"
+amcivwar.40.a:0 "첩보활동위원회가 만들어질 것이다!"
 amcivwar.40.b:0 "지금으로서는 중요하지 않다."
 
 amcivwar.41.t:0 "적색 테러"
@@ -309,7 +309,7 @@ amcivwar.44.t:0 "중앙 위원회 지시 #53: 혁명 육군의 대표 지명"
 amcivwar.44.d:0 "The Central Committee has released a directive to appoint a member to be the head of the Revolutionary Army and guide the army to victory. The Central Committee has decided to appoint…."
 amcivwar.44.a:0 "벤자민 카틴"
 amcivwar.44.b:0 "한스 에밀리"
-amcivwar.44.c:0 "Louis Secundy"
+amcivwar.44.c:0 "루이스 세쿤디"
 
 amcivwar.45.t:0 "중앙 위원회 지시 #103: 혁명 공군의 대표 지명"
 amcivwar.45.d:0 "The Central Committee has released a directive to appoint a member to be the head of the Revolutionary Air Force and guide the Air Force to victory. The Central Committee has decided to appoint…."
@@ -416,26 +416,26 @@ amcivwar.70.b:0 "Congress votes to not Militarize the WASPs"
 amcivwar.71.t:0 "참모총장"
 amcivwar.71.d:0 "With the civil war raging all around us and the fact that we do not have a chief of Staff has prompted concern among various political and military leaders. Thus, they met with [USA.GETLeader] to appoint a Chief of Staff to win this war."
 amcivwar.71.a:0 "오마 브래들리"
-amcivwar.71.b:0 "Marlin Craig"
+amcivwar.71.b:0 "마를린 크레이그"
 amcivwar.71.c:0 "월터 스미스"
 
 amcivwar.72.t:0 "육군 참모"
 amcivwar.72.d:0 "With the civil war raging all around us and the fact that we do not have a Chief of the Army has prompted concern among various political and military leaders. Thus, they met with [USA.GETLeader] to appoint a Chief of the Army to win this war."
 amcivwar.72.a:0 "드와이트 아이젠하워"
 amcivwar.72.b:0 "케네스 조지 알트하우스"
-amcivwar.72.c:0 "Samuel D. Sturgis Jr"
+amcivwar.72.c:0 "사무엘 D 스터지스 주니어"
 
 amcivwar.73.t:0 "해군 참모"
 amcivwar.73.d:0 "With the civil war raging all around us and the fact that we do not have a Chief of the Navy has prompted concern among various political and military leaders. Thus, they met with [USA.GETLeader] to appoint a Chief of the Navy to win this war."
-amcivwar.73.a:0 "William Harrison Standley"
+amcivwar.73.a:0 "윌리엄 해리슨 스탠들리"
 amcivwar.73.b:0 "어니스트 조셉 킹"
 amcivwar.73.c:0 "토마스 하트"
 
 amcivwar.74.t:0 "공군 참모"
 amcivwar.74.d:0 "With the civil war raging all around us and the fact that we do not have a Chief of the Air Force has prompted concern among various political and military leaders. Thus they met with [USA.GETLeader] to appoint a Chief of the Air Force to win this war."
-amcivwar.74.a:0 "Carl Andrew Spaatz"
+amcivwar.74.a:0 "칼 앤드류 스파츠"
 amcivwar.74.b:0 "Edward Vernon Rickenbacker"
-amcivwar.74.c:0 "Ira Clarence Eaker"
+amcivwar.74.c:0 "아이라 클래런스 이커"
 
 amcivwar.75.t:0 ""
 amcivwar.75.d:0 ""
@@ -611,8 +611,8 @@ amcivwar.125.b:0 "우리는 국민의 재산을 훔치지 않는다."
 ### Foreign Interventions
 
 amcivwar.150.t:0 "미국의 혼란"
-amcivwar.150.d:0 "The United States of America has descended into a civil war, with syndicalists right on our doorstep and Huey Long rallying forces to oppose both. Chaos has overtaken our neighbours to the south. We are thus presented with two choices: one is to stay out of the conflict and consider supporting one of the non-syndicalist factions, with the hope of eventually having a new ally once the dust is settled. The other is to activate Defence Plan Two and occupy strategic locations while preparing for a worst case scenario where the syndicalists win, even though no American faction would be pleased with us. In neither case do officials support going to war and wasting British and Canadian lives on a fight that isn't even for the Home Isles."
-amcivwar.150.a:0 "We will consider supporting a faction"
+amcivwar.150.d:0 "미합중국이 내전 상태에 빠졌습니다. 우리 코앞에는 빨갱이들이 있고, 반대편에서는 미합중국과 빨갱이 모두에 반대하는 휴이 롱이 군대를 집결시켰습니다. 혼돈이 우리의 이웃을 집어삼켰습니다. 따라서 우리는 두 가지 중 하나를 선택해야 합니다. 하나는 분쟁에 휘말리지 않으면서 빨갱이가 아닌 파벌 중 하나를 도와주는 것입니다. 일단 사태가 해결된다면 이들은 결국 새로운 동맹 맺기를 희망할 것입니다. 또 다른 하나는 -미국의 모든 파벌들이 싫어하겠지만은- 빨갱이들이 승리하는 최악의 경우에 대비하기 위해 제 2 방위계획을 활성화하고 전략적인 위치를 선점하는 것입니다. 어떤 선택이든지간에 당국자들은 영국인과 캐나다인이 전쟁 상태에 돌입해서 본토 수복이 아닌 싸움에 힘을 낭비하는 것을 원하지 않습니다."
+amcivwar.150.a:0 "우리는 누군가를 지원해야 한다"
 amcivwar.150.b:0 "제 2 방위계획을 활성화하라"
 
 amcivwar.151.t:0 "Alaska Seized"
@@ -796,7 +796,7 @@ amcivwar.236.a:0 "On Our Own Then"
 
 amcivwar.600.t:0 "[Root.GetAdjective]의 붕괴"
 amcivwar.600.d:0 "Our forces cannot hold out against the enemy any longer - already our troops are beginning to desert en masse, and the ripple of disorganization is working its way up the ranks. [Root.GetNameDefCap] is near the point of defeat, and we must admit that it is so."
-amcivwar.600.a:0 "Thus it ends here..."
+amcivwar.600.a:0 "여기서 끝나는구만..."
 
 amcivwar.607.t:0 "연방의 붕괴"
 amcivwar.607.d.lives:0 "It appears that the Federal government is on its last legs in the American Civil War. Already most of its land has been swallowed up by [annex_to.GetNameDef] and other American factions, and what is left is but the last remnants of its army - now demoralized and suffering from mass desertions, but holding out against all hope that a miracle might save them. Some Federal leaders have already met with [annex_to.GetAdjective] generals to negotiate the terms of their inevitable complete surrender."
