--- a/Kaiserreich Korean Translation/localisation/KR_Guatemala_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Guatemala_l_english.yml
@@ -1,26 +1,26 @@
 l_english:
 
 ### Parties ###
-GUA_totalist_party_long:0 "Partido de la Revolución Guatemalteca"
-GUA_totalist_party:0 "PRG"
-GUA_syndicalist_party_long:0 "Partido Revolucionario"
-GUA_syndicalist_party:0 "PR"
-GUA_radical_socialist_party_long:0 "Partido Acción Revolucionaria"
-GUA_radical_socialist_party:0 "PAR"
-GUA_social_democrat_party_long:0 "Partido del Progreso Nacional"
-GUA_social_democrat_party:0 "PPN"
-GUA_social_liberal_party_long:0 "Partido Liberal(Social)"
-GUA_social_liberal_party:0 "PL(Social)"
-GUA_market_liberal_party_long:0 "Partido Liberal(Corporativista)"
-GUA_market_liberal_party:0 "PL(Corporativista)"
-GUA_social_conservative_party_long:0 "Partido Unionista"
-GUA_social_conservative_party:0 "PU"
-GUA_authoritarian_democrat_party_long:0 "Partido Liberal(Militar)"
-GUA_authoritarian_democrat_party:0 "PL(Militar)"
-GUA_paternal_autocrat_party_long:0 "Fuerzas Armadas de Guatemala"
-GUA_paternal_autocrat_party:0 "FAG"
-GUA_national_populist_party_long:0 "Partido Populista"
-GUA_national_populist_party:0 "PP"
+GUA_totalist_party_long:0 "과테말라 혁명당"
+GUA_totalist_party:0 "과테말라 혁명당"
+GUA_syndicalist_party_long:0 "혁명주의당"
+GUA_syndicalist_party:0 "혁명주의당"
+GUA_radical_socialist_party_long:0 "혁명행동당"
+GUA_radical_socialist_party:0 "혁명행동당"
+GUA_social_democrat_party_long:0 "국민진보당"
+GUA_social_democrat_party:0 "국민진보당"
+GUA_social_liberal_party_long:0 "자유당(사회주의)"
+GUA_social_liberal_party:0 "자유당(사회주의)"
+GUA_market_liberal_party_long:0 "자유당(조합주의)"
+GUA_market_liberal_party:0 "자유당(조합주의)"
+GUA_social_conservative_party_long:0 "통일당"
+GUA_social_conservative_party:0 "통일당"
+GUA_authoritarian_democrat_party_long:0 "자유당(군부)"
+GUA_authoritarian_democrat_party:0 "자유당(군부)"
+GUA_paternal_autocrat_party_long:0 "과테말라 국군"
+GUA_paternal_autocrat_party:0 "과테말라 국군"
+GUA_national_populist_party_long:0 "대중주의당"
+GUA_national_populist_party:0 "대중주의당"
 
 ### Ideas ###
 GUA_socialist_compensation:0 "Socialist Compensation"
@@ -156,7 +156,7 @@ guatemala.17.t:0 "Victory!"
 guatemala.17.d:0 "The fighting was brutal. The rebels made Quetzaltenango into a formidable fortress. We incurred heavy losses. We needed to pledge all our reserves to the fight. The capital was virtually undefended. However, we succeeded. We broke through their lines yesterday, and captured their leaders. As most rebels were in this city, the rebellion was effectively broken. After a brief respite, the army marched in the rest of the country and made sure all the remaining pockets were defeated."
 guatemala.17.a:0 "Guatemala finds peace, at last!"
 guatemala.18.t:0 "The Cost of Pride"
-guatemala.18.d:0 "Refusing to let the rebels taint the capital, the defenders rallied in front of Ciudad de Guatemala. The battle was a bloody one, with many loses on both sides, but the numerical superiority of the rebels won over the smaller defending army. When it was clear that the rebels would win, the government escaped the capital, leaving it open to be liberated by the NPP. Hearing this news, the rest of the army, scattered around the Mexican border, agreed to lay down their arms and swear allegiance to the new government." 
+guatemala.18.d:0 "Refusing to let the rebels taint the capital, the defenders rallied in front of Ciudad de Guatemala. The battle was a bloody one, with many loses on both sides, but the numerical superiority of the rebels won over the smaller defending army. When it was clear that the rebels would win, the government escaped the capital, leaving it open to be liberated by the NPP. Hearing this news, the rest of the army, scattered around the Mexican border, agreed to lay down their arms and swear allegiance to the new government."
 guatemala.18.a:0 "Freedom, at last!"
 guatemala.19.t:0 "The Fate of El Salvador"
 guatemala.19.d:0 "El Salvador has turned red! While we managed to put down the rebellion in our land, it seems they have failed. Our government has decided to prepare for war to liberate our brethren!"
