--- a/Kaiserreich Korean Translation/localisation/KR_Haiti_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Haiti_l_english.yml
@@ -1,23 +1,23 @@
 ﻿l_english:
 
 ### Parties ###
-HAI_totalist_party:0 "Avant-Garde"
-HAI_totalist_party_long:0 "Parti d'Avant-Garde"
-HAI_syndicalist_party:0 "Syndicaliste"
-HAI_syndicalist_party_long:0 "Parti Syndicaliste"
-HAI_radical_socialist_party:0 "Socialiste"
-HAI_radical_socialist_party_long:0 "Parti Socialiste"
-HAI_social_democrat_party:0 "Populaire"
-HAI_social_democrat_party_long:0 "Mouvement Populaire"
-HAI_social_liberal_party:0 "Salut"
-HAI_social_liberal_party_long:0 "Parti du Salut"
-HAI_market_liberal_party:0 "Haïtien"
-HAI_market_liberal_party_long:0 "Parti Haïtien"
-HAI_social_conservative_party:0 "Nationaliste"
-HAI_social_conservative_party_long:0 "Parti Nationaliste"
-HAI_authoritarian_democrat_party:0 "Libéral"
-HAI_authoritarian_democrat_party_long:0 "Parti Libéral"
-HAI_paternal_autocrat_party:0 "Junte"
-HAI_paternal_autocrat_party_long:0 "Junte"
-HAI_national_populist_party:0 "Unité Nationale"
-HAI_national_populist_party_long:0 "Parti de l'Unité Nationale"
+HAI_totalist_party:0 "아방가르드당"
+HAI_totalist_party_long:0 "아방가르드당"
+HAI_syndicalist_party:0 "생디칼리스트당"
+HAI_syndicalist_party_long:0 "생디칼리스트당"
+HAI_radical_socialist_party:0 "사회주의당"
+HAI_radical_socialist_party_long:0 "사회주의당"
+HAI_social_democrat_party:0 "대중운동"
+HAI_social_democrat_party_long:0 "대중운동"
+HAI_social_liberal_party:0 "구원당"
+HAI_social_liberal_party_long:0 "구원당"
+HAI_market_liberal_party:0 "아이티당"
+HAI_market_liberal_party_long:0 "아이티당"
+HAI_social_conservative_party:0 "민족주의당"
+HAI_social_conservative_party_long:0 "민족주의당"
+HAI_authoritarian_democrat_party:0 "자유당"
+HAI_authoritarian_democrat_party_long:0 "자유당"
+HAI_paternal_autocrat_party:0 "군부"
+HAI_paternal_autocrat_party_long:0 "군부"
+HAI_national_populist_party:0 "국민통일당"
+HAI_national_populist_party_long:0 "국민통일당"
